
h2(#sirius7.1.0). Changes in Sirius 7.1.0

h3. User-Visible Changes

In a tree editor, if the expand is done with the right arrow key, the behavior is now OK. Before this version, if the expand is done for the first time with the right arrow key, only a blank child is displayed. You can refer to "bugzilla 549352":https://bugs.eclipse.org/bugs/show_bug.cgi?id=549352 for more details. 

h2(#sirius7.0.4). Changes in Sirius 7.0.4

h3. User-Visible Changes

Minor release to avoid errors thrown during indirect deletion of edges whose label is selected (deletion done from outside the diagram editor or from a custom command).

h2(#sirius7.0.3). Changes in Sirius 7.0.3

h3. Developer-Visible Changes

* <span class="label label-danger">Removed</span> To ensure compatibility with Eclipse 2022-09, dependency to @com.ibm.icu@ has been removed.

h2(#sirius7.0.2). Changes in Sirius 7.0.2

h3. Specifier-Visible Changes

* <span class="label label-success">Added</span> The variables @edgeView@ and @otherEnd@ are now also available during precondition evaluation of a reconnect tool. Before, these variables were available only during the reconnection tool execution.

h3. Developer-Visible Changes

h4. Changes in @org.eclipse.sirius@

* <span class="label label-success">Added</span> The method @org.eclipse.sirius.business.api.helper.task.TaskHelper.checkPrecondition(EObject, AbstractToolDescription, Map<String, EObject>, boolean, boolean)@ has been added to factorize code for the evaluation of a tool precondition.

h4. Changes in @org.eclipse.sirius.common@

* <span class="label label-success">Added</span> The method @org.eclipse.sirius.common.tools.api.interpreter.VariableType.fromVariableTypes(VariableType...)@ has been added to create a new VariableType from a list of other VariableTypes, ie a concatenation without duplicate.

h4. Changes in @org.eclipse.sirius.diagram@
