@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2021 THALES GLOBAL SERVICES.
+ * Copyright (c) 2011, 2022 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -138,6 +138,15 @@ public class DeleteEObjectTask extends AbstractCommandTask {
     @Override
     public String getLabel() {
         return Messages.DeleteEObjectTask_label;
+    }
+
+    /**
+     * Get the EObject that will be deleted by this task.
+     * 
+     * @return the EObject that will be deleted by this task
+     */
+    public EObject getEObjectToDelete() {
+        return objectToDelete;
     }
 
 }
